--- a/index.html
+++ b/index.html
@@ -22,48 +22,48 @@
 </details>
 </div>  
 <div Class="container">
-<h3>COURSE:HTML</h3>
-<p>Free resource for helping beginners to build, manage and grow their websites.</p>
+<h3>HTML RESOURCES</h3>
+<p>This is a free resource for helping beginners to build, manage and grow their websites.</p>
 <form>
 <ul>
   <li><h3>Learn HTML:</h3></li>
-<a href="https://www.codecademy.com/learn/learn-html"> 
+<a target="_blank" href="https://www.codecademy.com/learn/learn-html"> 
 <button type= "submit" class="button_1">Click to learn html</a></button 
  <li><h3>HTML Web Basics:</h3></li>
-<a href="https://www.learnenough.com/html"> 
+<a target="_blank" href="https://www.learnenough.com/html"> 
   <button type= "submit" class="button_1">Click to learn html basics</a></button
 <li><h3>Start a free HTML Course:</h3></li>
-<a href="https://www.codeavengers.com/profile#html-css">
-  <button type= "submit" class="button_1">Click to learn course</a></button
+<a target="_blank" href="https://www.codeavengers.com/profile#html-css">
+  <button type= "submit" class="button_1">Click to learn course </a></button
   <li><h3> Start learning HTML:</h3></li>
-<a href="https://www.sololearn.com/learning/1014"> 
+<a target="_blank" href="https://www.sololearn.com/learning/1014"> 
   <button type= "submit" class="button_1">Click to learn html</a></button>
 <li><h3>Free HTML Tutorials:</h3></li>
-<a href="https://www.codeconquest.com/tutorials/html/"> 
+<a target="_blank" href="https://www.codeconquest.com/tutorials/html/"> 
   <button type= "submit" class="button_1">Click to learn tutorial</a></button>
 <li><h3>HTML Knowledge Quiz:</h3></li>
-<a href="https://www.codeconquest.com/coding-quizzes/html-knowledge-quiz/"> 
+<a target="_blank" href="https://www.codeconquest.com/coding-quizzes/html-knowledge-quiz/"> 
   <button type= "submit" class="button_1">Click to take Quiz</a></button>
 <li><h3>Learn to code with HTML - free 3,000-hour curriculum:</h3></li>
-<a href="https://www.freecodecamp.org/news/html-vs-jsx-whats-the-difference/">
+<a target="_blank" href="https://www.freecodecamp.org/news/html-vs-jsx-whats-the-difference/">
   <button type= "submit" class="button_1">Click to learn html</a></button>
 <li><h3>Web Development for Beginners – Learn Basic HTML to Build Your First Web Page </h3></li>
-<a href="https://www.freecodecamp.org/news/web-development-for-beginners-basic-html-and-css/">
+<a target="_blank" href="https://www.freecodecamp.org/news/web-development-for-beginners-basic-html-and-css/">
   <button type= "submit" class="button_1">Click to learn the basics</a></button>
 <li><h3>How to Build a Responsive Web Design:</h3></li>
-<a href="https://www.freecodecamp.org/learn/responsive-web-design/#basic-html-and-html5">
+<a target="_blank" href="https://www.freecodecamp.org/learn/responsive-web-design/#basic-html-and-html5">
   <button type= "submit" class="button_1">Click to learn more</a></button>		
 <li><h3>HTML Fundamentals:</h3></li>
-<a href="https://www.edx.org/course/html5-and-css-fundamentals">
+<a target="_blank" href="https://www.edx.org/course/html5-and-css-fundamentals">
   <button type= "submit" class="button_1">Click to learn html fundamentals</a></button>
 <li><h3>HTML Tutorials:</h3></li>
-<a href="https://www.w3schools.com/html/default.asp">
+<a target="_blank" href="https://www.w3schools.com/html/default.asp">
   <button type= "submit" class="button_1">Click to learn tutorials</a></button>
 <li><h3>Introduction to HTML: Making webpages:</h3></li>
-<a href="https://www.khanacademy.org/computing/computer-programming/html-css#intro-to-html">
+<a target="_blank" href="https://www.khanacademy.org/computing/computer-programming/html-css#intro-to-html">
   <button type= "submit" class="button_1">Click to learn Lesson</a></button>
 <li><h3>HTML5 Periodical Time Table:</h3></li>
-<a href="https://websitesetup.org/html5-periodical-table/">
+<a target="_blank" href="https://websitesetup.org/html5-periodical-table/">
   <button type= "submit" class="button_1">Click to learn html</a></button>
 </ul>
 </form>
