--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
 </details>
 </div>  
 <div Class="container">
-<h3>HTML RESOURCES</h3>
+<h2>
+<p>HTML RESOURCES</p>
+</h2>
 <p>This is a free resource for helping beginners to build, manage and grow their websites.</p>
 <form>
 <ul>
   <li><h3>Learn HTML:</h3></li>
 <a target="_blank" href="https://www.codecademy.com/learn/learn-html"> 
 <button type= "submit" class="button_1">Click to learn html</a></button 
- <li><h3>HTML Web Basics:</h3></li>
+    <li><h3>HTML Web Basics:</h3></li>
 <a target="_blank" href="https://www.learnenough.com/html"> 
   <button type= "submit" class="button_1">Click to learn html basics</a></button
-<li><h3>Start a free HTML Course:</h3></li>
+   <li><h3>Start a free HTML Course:</h3></li>
 <a target="_blank" href="https://www.codeavengers.com/profile#html-css">
   <button type= "submit" class="button_1">Click to learn course </a></button
-  <li><h3> Start learning HTML:</h3></li>
+   <li><h3> Start learning HTML:</h3></li>
 <a target="_blank" href="https://www.sololearn.com/learning/1014"> 
   <button type= "submit" class="button_1">Click to learn html</a></button>
 <li><h3>Free HTML Tutorials:</h3></li>
